correction referencement local

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Photographer",
+  "@type": "ProfessionalService",
   "name": "Nina Carducci",
   "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg",
   "address": {
@@ -32,6 +32,7 @@
   },
   "telephone": "+33 5 56 67 78 89",
   "openingHours": "Mo-Fr 10:00-19:00",
+  "priceRange": "50€-400€",
   "url": "https://caouadan.github.io/ninacarducci-optimized/"
 }
 </script>
