add OpenGraph and Twitter Cards

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
   "url": "https://caouadan.github.io/ninacarducci-optimized/"
 }
 </script>
+
+  <meta property="og:title" content="Nina Carducci - Photographe">
+  <meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle.">
+  <meta property="og:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+  <meta property="og:url" content="https://caouadan.github.io/ninacarducci-optimized/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nina Carducci - Photographe">
+  <meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle.">
+  <meta name="twitter:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
 </head>
 <body>
 <div class="top-header">
