opengraph and twitter cards modified

--- a/index.html
+++ b/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Nina Carducci - Photographe</title>
+    <meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
+
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Nina Carducci - Photographe">
+    <meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
+    <meta property="og:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+    <meta property="og:url" content="https://caouadan.github.io/ninacarducci-optimized/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nina Carducci - Photographe">
+    <meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
+    <meta name="twitter:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-
-    <title>Nina Carducci - Photographe</title>
-    <meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle.">
 
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
 
-	<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "ProfessionalService",
-  "name": "Nina Carducci",
-  "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "68 avenue Alsace-Lorraine",
-    "addressLocality": "Bordeaux",
-    "postalCode": "33200",
-    "addressCountry": "FR"
-  },
-  "telephone": "+33 5 56 67 78 89",
-  "openingHours": "Mo-Fr 10:00-19:00",
-  "priceRange": "50€-400€",
-  "url": "https://caouadan.github.io/ninacarducci-optimized/"
-}
-</script>
-
-  <meta property="og:title" content="Nina Carducci - Photographe">
-  <meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle.">
-  <meta property="og:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
-  <meta property="og:url" content="https://caouadan.github.io/ninacarducci-optimized/">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Nina Carducci - Photographe">
-  <meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle.">
-  <meta name="twitter:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+    <!-- référencement local -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Photographer",
+      "name": "Nina Carducci",
+      "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "68 avenue Alsace-Lorraine",
+        "addressLocality": "Bordeaux",
+        "postalCode": "33200",
+        "addressCountry": "FR"
+      },
+      "telephone": "+33 5 56 67 78 89",
+      "openingHours": "Mo-Fr 10:00-19:00",
+      "url": "https://caouadan.github.io/ninacarducci-optimized/"
+    }
+    </script>
 </head>
+
 <body>
 <div class="top-header">
     <h3 class="name">Nina Carducci</h3>
