--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h3 class="about-me__title">A propos de moi</h3>
         <h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			C'est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
     </div>
 </div>
 <div id="gallery">
@@ -124,7 +124,7 @@
     <div class="quote">
         <figure>
             <blockquote>
-                <h1 class="quote__text">Un portrait n'est pas une ressemblance...</h1>
+                <h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
             </blockquote>
             <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
@@ -136,7 +136,7 @@
         <div class="service">
             <div class="service__description">
                 <h3>Shooting photo</h3>
-                <p>Pour capturer vos moments les plus précieux...</p>
+                <p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
             </div>
             <div class="service__price">
                 <h4>350€/demi journée</h4>
@@ -146,7 +146,7 @@
         <div class="service">
             <div class="service__description">
                 <h3>Retouches</h3>
-                <p>Vous souhaitez retoucher vos photos pour un résultat professionnel...</p>
+                <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
             </div>
             <div class="service__price">
                 <h4>50€/photo</h4>
@@ -156,7 +156,7 @@
         <div class="service">
             <div class="service__description">
                 <h3>Album photos</h3>
-                <p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble...</p>
+                <p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
             </div>
             <div class="service__price">
                 <h4>400€ album A4</h4>
@@ -168,7 +168,7 @@
 <div class="quote">
     <figure>
         <blockquote>
-            <h1 class="quote__text">De manière inconsciente, je crois...</h1>
+            <h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
     </figure>
