modified referencement local

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Photographer",
+      "@type": "ProfessionalService",
       "name": "Nina Carducci",
       "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg",
       "address": {
@@ -47,6 +47,7 @@
       },
       "telephone": "+33 5 56 67 78 89",
       "openingHours": "Mo-Fr 10:00-19:00",
+	  "priceRange": "50€ - 400€",
       "url": "https://caouadan.github.io/ninacarducci-optimized/"
     }
     </script>
