--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Nina Carducci - Photographe">
     <meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
-    <meta property="og:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+    <meta property="og:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.webp">
     <meta property="og:url" content="https://caouadan.github.io/ninacarducci-optimized/">
     <meta property="og:type" content="website">
 
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nina Carducci - Photographe">
     <meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
-    <meta name="twitter:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg">
+    <meta name="twitter:image" content="https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.webp">
 
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="./assets/style.css">
@@ -37,7 +37,7 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "Nina Carducci",
-      "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.jpg",
+      "image": "https://caouadan.github.io/ninacarducci-optimized/assets/images/nina.webp",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "68 avenue Alsace-Lorraine",
@@ -63,7 +63,7 @@
             <li><a href="#services">Service</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-                <img src="assets/images/instagram.png" alt="Instagram Nina Carducci">
+                <img src="assets/images/instagram.webp" alt="Instagram Nina Carducci">
             </a></li>
         </ul>
     </div>
@@ -77,13 +77,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="Photo d'un homme d'affaire qui marche">
+                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Photo d'un homme d'affaire qui marche">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="Photo de jeunes à un concert">
+                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Photo de jeunes à un concert">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="Photo de danse de mariage">
+                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Photo de danse de mariage">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -98,7 +98,7 @@
 </div>
 <div id="about">
     <div class="picture left">
-        <img src="./assets/images/nina.jpg" alt="Portrait de Nina Carducci">
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci">
     </div>
     <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -111,15 +111,15 @@
     <h3 class="title">Portfolio</h3>
     <div class="container py-3">
         <div class="gallery" style="display: none">
-            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Photo d'un concert">
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Photo portrait d'un homme d'affaire">
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Photo d'une réunion d'entreprise">
-            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Photo de mariage d'un couple qui se donne la main">
-            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Photo portrait artistique d'un homme">
-            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Photo d'un couple marié">
-            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Photo portrait d'une femme">
-            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Photo d'un chanteur en concert">
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Photo portrait d'une femme d'affaire">
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Photo d'un concert">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Photo portrait d'un homme d'affaire">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Photo d'une réunion d'entreprise">
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Photo de mariage d'un couple qui se donne la main">
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Photo portrait artistique d'un homme">
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Photo d'un couple marié">
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Photo portrait d'une femme">
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Photo d'un chanteur en concert">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Photo portrait d'une femme d'affaire">
         </div>
     </div>
     <div class="quote">
@@ -190,7 +190,7 @@
             </form>
         </div>
         <div class="picture right">
-            <img src="./assets/images/camera.jpg" alt="Appareil photo">
+            <img src="./assets/images/camera.webp" alt="Appareil photo">
         </div>
     </div>
 </div>
